style: add spotless and format code